# rust-ceda

./: .gitignore  Cargo.toml  README.md
CEDA/: Get capabilities.bru  Get data.bru  Signin.bru  bruno.json
src/: ceda.rs  ceda_client.rs  ceda_csv_reader.rs  data_csv.rs  datastore.rs  db.rs  error.rs  main.rs
src/cli/: mod.rs
src/cli/command/: mod.rs  process.rs  update.rs
