[package]
name = "rust-ceda"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
futures = "0.3.30"
indicatif = "0.17.8"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
scraper = "0.20.0"
sqlx = { version = "0.8.1", features = ["migrate", "runtime-tokio-native-tls", "sqlite"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = "0.7.11"
